* Fancy animations when switching screens
* Search transactions
* Calendar instead of date picker
* Reorder categories
* Theme updates
* Localization updates
* High refresh rate
* Refresh icons and splash screen
* Update status bar and navigation bar colors
* Autofill when logging in or registering